# asterisk

./: .gitignore  LICENSE  README.md  datastructures.ml  dune  dune-project  execution.md  generator.ml  lr0.ml  main.ml  util.ml
example/lang1/: ast.ml  dune  example.l1  grammar.ast  lex.ml  main.ml
frontends/: Ocaml.ml  javascript.ml
lib/: generator.ml  util.ml
lib/frontends/: Ocaml.ml  java.ml  javascript.ml
lib/spec/: ast.ml  lex.ml  parser.ml  spec.ast  spec_parser.ml
test/: dune  grammar-lex.ast  test.ml
