(lang dune 3.13)
(name asterisk)

(source
 (github HSMF/asterisk))

(authors "hyde")

(maintainers "hyde")

(license MIT)

; (documentation https://url/to/documentation)

(package
 (name asterisk)
 (synopsis "LR(1) parser generator")
 (description "LR(1) parser generator")
 (depends ocaml dune)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project

